--- a/src/app/listatarefa/listatarefa.component.css
+++ b/src/app/listatarefa/listatarefa.component.css
@@ -4,9 +4,17 @@
     align-items: center;
     margin-top: 10px;
 }
+.title{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
 a{
-    margin: 5px;
+    margin: 3px;
     font-size: 20px;
+}
+a:hover{
+    text-decoration: none;
 }
 
 table{
@@ -22,11 +30,13 @@ tbody{
     background-color:#1f2429;
 }
 th{
-    padding: 20px;
+    font-size: 15px;
+    padding: 10px 0px 10px 2px;
     color: rgb(7, 55, 95);
 }
 td{
-    padding: 10px;
+   
     color: rgb(243, 233, 233);
-    font-size: 15px;
+    font-size: 12px;
+    font-weight: 100;
 }
