--- a/src/app/listatarefa/listatarefa.component.html
+++ b/src/app/listatarefa/listatarefa.component.html
@@ -25,7 +25,13 @@
           </nav>
           
           <div class="container-fluid">
-            <h1 class="mt-4">Lista de Tarefas</h1>
+          <div class="title">
+            <h1 class="mt-3">Tarefas</h1>
+            <a routerLink="/new">
+              <fa-icon [icon]="faPlus"></fa-icon>New
+          </a>
+
+          </div>
 
             <p *ngFor="let alert of alerts">
                 <ngb-alert [type]="alert.type" 
@@ -42,11 +48,9 @@
                     <thead>
                         <th>Nome</th>
                         <th>Status</th>
-                        <th>
-                            <a routerLink="/new">
-                                <fa-icon [icon]="faPlus"></fa-icon> new
-                            </a>
-                        </th>
+                        <th>Valor</th>
+                        <th>Local</th>
+                        <th>Action</th>
                     </thead>
                     <tbody>
                         
@@ -54,6 +58,8 @@
                             <td>{{item.nome}}</td>
                             <td *ngIf="item.status == 0">Pendente</td>
                             <td *ngIf="item.status == 1">Pago</td>
+                            <td>{{item.valor | number:'2.2-5'}} </td>
+                            <td>{{item.local}}</td>
                             <td>
                                 <a routerLink="/edit/{{item.id}}" class="text-success">
                                     <fa-icon [icon]="faEdit"></fa-icon> 
@@ -66,7 +72,7 @@
     
                         </tr>
                         <tr>
-                            <td colspan="3">
+                            <td colspan="5">
                                 <pagination-controls (pageChange)="p = $event"></pagination-controls>
                             </td>
                         </tr>
