--- a/src/app/template/caduser/caduser.component.html
+++ b/src/app/template/caduser/caduser.component.html
@@ -17,30 +17,30 @@
         <div class="form-row">
           <div class="form-group col-md-6">
             <label for="nome">Nome<span>*</span></label>
-            <input type="text" class="form-control" name="nome" ngModel required #nome="ngModel">
+            <input type="text" class="form-control" name="nome" ngModel  #nome="ngModel"  autocomplete="off">
           </div>
           <div class="form-group col-sm-6">
             <label for="sobrenome">sobrenome <span>*</span></label>
-            <input type="text" class="form-control" name="sobrenome" ngModel>
+            <input type="text" class="form-control" name="sobrenome" ngModel  autocomplete="off">
           </div>
         </div>
     
         <div class="form-row">
           <div class="form-group col-md-12">
             <label for="exampleInputEmail1">Email <span>*</span></label>
-            <input type="email" class="form-control" name="email" ngModel>
+            <input type="email" class="form-control" name="email" ngModel  autocomplete="off">
           </div>
         </div>
     
         <div class="form-row">
           <div class="form-group col-md-6">
             <label for="exampleInputPassword1">Password <span>*</span></label>
-            <input type="password" class="form-control" id="exampleInputPassword1" name="password" ngModel>
+            <input type="password" class="form-control" id="exampleInputPassword1" name="password" ngModel  autocomplete="off">
           </div>
     
           <div class="form-group col-md-6">
             <label for="exampleInputPassword1">Repet passwod <span>*</span></label>
-            <input type="password" class="form-control" id="exampleInputPassword1" name="reset" ngModel>
+            <input type="password" class="form-control" id="exampleInputPassword1" name="reset" ngModel  autocomplete="off">
           </div>
         </div>
     
