--- a/src/app/template/caduser/caduser.component.html
+++ b/src/app/template/caduser/caduser.component.html
@@ -6,18 +6,16 @@
 
       <form #f="ngForm" (ngSubmit)="OnSubmit(f)">
         <h1 class="mt-3">Novo Usuário</h1>
-        <div *ngFor="let obg of error">
-          <p>{{obg.msg}}</p>
-        </div>
-      
-        <div *ngIf="camposvazio">
-          <p><strong>{{camposvazio}}</strong></p>
+        <div *ngFor="let item of alerts">
+            <p>
+              <ngb-alert [type]="item.type"  (closed)="close(item)">{{ item.message}}</ngb-alert>
+            </p>
         </div>
 
         <div class="form-row">
           <div class="form-group col-md-6">
             <label for="nome">Nome<span>*</span></label>
-            <input type="text" class="form-control" name="nome" ngModel  #nome="ngModel"  autocomplete="off">
+            <input type="text" class="form-control" name="nome" ngModel  #nome="ngModel"  autocomplete="off" value={{nome}}>
           </div>
           <div class="form-group col-sm-6">
             <label for="sobrenome">sobrenome <span>*</span></label>
