--- a/src/app/template/caduser/caduser.component.html
+++ b/src/app/template/caduser/caduser.component.html
@@ -15,7 +15,7 @@
         <div class="form-row">
           <div class="form-group col-md-6">
             <label for="nome">Nome<span>*</span></label>
-            <input type="text" class="form-control" name="nome" ngModel  #nome="ngModel"  autocomplete="off" value={{nome}}>
+            <input type="text" class="form-control" name="nome" ngModel  #nome="ngModel"  autocomplete="off">
           </div>
           <div class="form-group col-sm-6">
             <label for="sobrenome">sobrenome <span>*</span></label>
